--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,16 +4,22 @@ on:
   push:
     branches:
       - master
+  schedule:
+    - cron: '0 0 * * 0'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{secrets.PAT}}
+
       - name: setup
         run: |
           git config --global user.name "longkey1"
           git config --global user.email "longkey1@users.noreply.github.com"
           git fetch --all
+
       - name: build
         run: make build
