build: migrate monthly updates

--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -1,4 +1,4 @@
-name: publish
+name: build_and_publish_image
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  build_and_publish:
+  build_and_publish_image:
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: terraform
