--- a/.github/workflows/build_branches.yml
+++ b/.github/workflows/build_branches.yml
@@ -16,7 +16,7 @@ jobs:
           echo "TZ=Asia/Tokyo" >> ${GITHUB_ENV}
 
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set updated date
         run: |
@@ -27,20 +27,20 @@ jobs:
           envsubst '${UPDATED}' < README.md.dist > README.md
 
       - name: Commit & Push
-        uses: stefanzweifel/git-auto-commit-action@v4.2.0
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "docs: update README by auto commit"
 
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/create-github-app-token@v1
+        id: app-token
         with:
-          token: ${{ secrets.GH_PAT }}
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
 
-      - name: Setup git
-        run: |
-          git config --global user.name "longkey1"
-          git config --global user.email "longkey1@users.noreply.github.com"
-          git fetch --all
+      - name: Checkout again
+        uses: actions/checkout@v4
+        with:
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Build branches
         run: make build
