--- a/.github/workflows/build_branches.yml
+++ b/.github/workflows/build_branches.yml
@@ -26,6 +26,12 @@ jobs:
         run: |
           envsubst '${UPDATED}' < README.md.dist > README.md
 
+      - name: Setup git
+        run: |
+          git config --global user.name "longkey1"
+          git config --global user.email "longkey1@users.noreply.github.com"
+          git fetch --all
+
       - name: Commit & Push
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
