--- a/.github/workflows/build_branches.yml
+++ b/.github/workflows/build_branches.yml
@@ -19,12 +19,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set updated date
-        run: |
-          echo "UPDATED=$(date --iso-8601=seconds)" >> ${GITHUB_ENV}
+        run: echo "UPDATED=$(date --iso-8601=seconds)" >> ${GITHUB_ENV}
 
       - name: Update README
-        run: |
-          envsubst '${UPDATED}' < README.md.dist > README.md
+        run: envsubst '${UPDATED}' < README.md.dist > README.md
 
       - name: Setup git
         run: |
