--- a/.github/workflows/build_branches.yml
+++ b/.github/workflows/build_branches.yml
@@ -24,6 +24,12 @@ jobs:
       - name: Update README
         run: envsubst '${UPDATED}' < README.md.dist > README.md
 
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+
       - name: Setup git
         run: |
           git config --global user.name "longkey1"
@@ -34,12 +40,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "docs: update README by auto commit"
-
-      - uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          private-key: ${{ secrets.PRIVATE_KEY }}
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Checkout again
         uses: actions/checkout@v4
